<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="IdentityCoe" Id="{7addeb9c-1f35-02cb-1566-9454b7e9e285}">
    <Declaration><![CDATA[TYPE
    IdentityCoe :
    STRUCT
        VendorId     : DWORD;
        ProductKey   : DWORD;
        Revision     : DWORD;
        SerialNumber : DWORD;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>