<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="InfoData" Id="{32907989-e0f2-0760-2633-c74d046b3005}">
    <Declaration><![CDATA[TYPE
    InfoData :
    STRUCT
        State         : UINT; // 0 valid
        AdsAddr       : AMSADDR;
        DcOutputShift : DINT;
        DcInputShift  : DINT;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>