<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="StatusOfSystem" Id="{947900ab-8e33-0bad-235e-10c71f4e03c5}">
    <Declaration><![CDATA[//Entspricht 0x6000 in COE
TYPE
    StatusOfSystem :
    STRUCT
        Error                 : BIT;
        Warning               : BIT;
        Reserved              : BIT;
        CurrentValueProperty  : BIT;
        Reserved1             : BIT;
        Reserved2             : BIT;
        Reserved3             : BIT;
        Reserved4             : BIT;
        Reserved5             : BIT;
        ErrorId               : UINT;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>