<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="WcState" Id="{c52e4fd3-dba9-0bb9-21a5-b6a1c55b1f66}">
    <Declaration><![CDATA[TYPE
    WcState :
    STRUCT
        WcState     : BIT; // 0 valid
        InputToggle : BIT;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>